# ChangeLog for dev-python/pycdio
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pycdio/ChangeLog,v 1.3 2008/05/14 23:02:38 sbriesen Exp $

  14 May 2008; Stefan Briesenick <sbriesen@gentoo.org> -pycdio-0.12.ebuild:
  removed old version

*pycdio-0.13 (17 Nov 2007)

  17 Nov 2007; Stefan Briesenick <sbriesen@gentoo.org> +pycdio-0.13.ebuild:
  version bump.

*pycdio-0.12 (16 May 2007)

  16 May 2007; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +pycdio-0.12.ebuild:
  initial commit.
