@@ -1,4 +1,4 @@
 DIST pycdio-0.13.tar.gz 343914 RMD160 6dab76a5811659272d54ac56df3c488912956960 SHA1 e2b9623db4a93391000464ff07df4e2b83ddde2a SHA256 0ff911a5a7d1ee5eb4da6227332e246fcd5bb4af9e041fc33a9b911458efbe68
-EBUILD pycdio-0.13.ebuild 1440 RMD160 49f318bd8f076b94a7b4a72652e4dccbbf6dfad9 SHA1 fcc6372892d6bd76ff99f0ccb4556004efc9adc0 SHA256 9882f7b3aa7245b78aa3cc0b38261ddd01d05b9f25c1df1105481f7145218a94
-MISC ChangeLog 569 RMD160 168f4b6ffdbfbe3316602fa18a552aebb4c20ed9 SHA1 492b8bfcd448678197a6609b566ae171e09d0582 SHA256 b99ce8a99d70dd3759e6f6aa55a60586abc657a16f16af22cd9fd3aea2fc86fd
+EBUILD pycdio-0.13.ebuild 1462 RMD160 df34eda0fe3c68fc57675259093c6919ae14a7b1 SHA1 863c36aa2010f683b0934454d6ae32f4b4f5e333 SHA256 aa4fe90afb78c8e4b8b0093fcfed747c609583607749d98fe3b9860cebc8816c
+MISC ChangeLog 688 RMD160 6549ca39041019007069067a4d9c2b4cf93b1f2c SHA1 a067bcaa9748aecee4f02b553ea0572f2b47a53b SHA256 85c8b91397c4ed8a64022e9488285704cfc2808649500300bf5e5ffe179b5298
 MISC metadata.xml 507 RMD160 f8c16e3275f3c7e8cb7373d6bfa25754ccb02c85 SHA1 21f33259bbe9e909dd8341aa582666023e17e42b SHA256 a15e313ce96543b1d6cdfcbc143d21318d56d54e5fc884682dd0240edaeebc85
