@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pycdio
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pycdio/ChangeLog,v 1.3 2008/05/14 23:02:38 sbriesen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pycdio/ChangeLog,v 1.4 2008/05/14 23:05:01 sbriesen Exp $
+
+  14 May 2008; Stefan Briesenick <sbriesen@gentoo.org> pycdio-0.13.ebuild:
+  fixed dependencies (solves bug #221473).
 
   14 May 2008; Stefan Briesenick <sbriesen@gentoo.org> -pycdio-0.12.ebuild:
   removed old version
